# libripc

./: .gitignore  .sparkleshare  AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
clients/: .gitignore  Makefile.am  Makefile.in  benchmark_resolver.c  benchmark_resolver_server.c  client.c  common.h  config.h.in  jetty-bench.c  ripc_long_pingpong_client.c  ripc_long_pingpong_server.c  ripc_pingpong_client.c  ripc_pingpong_server.c  server.c  socket_pingpong_client.c  socket_pingpong_server.c
src/: .gitignore  Makefile.am  Makefile.in  common.h  config.h.in  libripc.c  memory.c  memory.h  resolver.c  resolver.h  resources.c  resources.h  ripc.c  ripc.h
src/bgp/: Makefile.am  Makefile.in  common.h  resolver.h  resources.h  ripc.c
src/bgp/infiniband/: Makefile.am  Makefile.in
src/infiniband/: .gitignore  Makefile.am  Makefile.in  common.h  memory.c  memory.h  multicast_resources.c  multicast_resources.h  resolver.c  resolver.h  resources.c  resources.h  ripc.c  trace_hooks.h  tracepoint.h  tracepoint_provider.c
src/local/: Makefile.am  common.h  memory.c  memory.h  resolver.c  resolver.h  resources.c  resources.h  ripc.c
src/resolver/: .gitignore  Makefile.am  address.c  address.h  base64.c  base64.h  capability.c  capability.h  context.h  naming.h  netarch.c  netarch.h  netarch_context.h  service.c  zkadapter.c  zkadapter.h
